--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -2,9 +2,31 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<link rel="stylesheet" href="css/pupoes_osaka.css">
+<title>☆マイページ☆</title>
 </head>
 <body>
+	<div id="headline">
+		<h1>名前表示</h1>
+	</div>
 
+	<div class="element">
+		<h3>
+			<a href="スケジュールのURL">スケジュール</a>
+		</h3>
+
+		<h3>
+			<a href="スポットマップへ戻るURL">修正する</a>
+		</h3>
+
+		<h3>
+			<!-- リマインドボタン -->
+		</h3>
+
+		<h3>
+			<!-- メモ帳 -->
+		</h3>
+
+	</div>
 </body>
 </html>
