--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -2,21 +2,26 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="css/pupoes_osaka.css">
+<link rel="stylesheet" href="css/myPage.css">
 <title>☆マイページ☆</title>
 </head>
 <body>
+
 	<div id="headline">
-		<h1>名前表示</h1>
+		<h1 class="mypage">マイページ</h1>
+	</div>
+
+	<div id="name">
+		<h2>名前表示</h2>
 	</div>
 
 	<div class="element">
 		<h3>
-			<a href="スケジュールのURL">スケジュール</a>
+			<a href="スケジュールのURL" target="_blank" rel="noopener noreferrer">スケジュール</a>
 		</h3>
 
 		<h3>
-			<a href="スポットマップへ戻るURL">修正する</a>
+			<a href="スポットマップへ戻るURL" target="_blank" rel="noopener noreferrer">修正する</a>
 		</h3>
 
 		<h3>
@@ -25,7 +30,7 @@
 
 		<h3>
 			<!-- メモ帳 -->
-			<label>メモ帳</label>
+			<label>メモ帳</label><br>
 			<textarea rows="5" cols="30"></textarea>
 		</h3>
 
