--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -12,6 +12,7 @@
 	</div>
 
 	<div id="name">
+		<!-- formやmodelから名前を持ってきて表示 -->
 		<h2>名前表示</h2>
 	</div>
 
@@ -21,7 +22,7 @@
 		</h3>
 
 		<h3>
-			<a href="スポットマップへ戻るURL" target="_blank" rel="noopener noreferrer">修正する</a>
+			<a href="「④スポットMAP」へ戻るURL" target="_blank" rel="noopener noreferrer">修正する</a>
 		</h3>
 
 		<h3>
