--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thyneleaf.org">
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/myPage.css">
@@ -35,6 +35,12 @@
 			<textarea rows="5" cols="30"></textarea>
 		</h3>
 
+		<h4>
+			<!-- <form name="Logout" method="post" action="/cgi-bin/Logout.cgi">
+			<input type="submit" value="Logout" />
+			</form> -->
+			<a href="ログアウト画面">ログアウト</a>
+		</h4>
 	</div>
 </body>
 </html>
