--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -6,7 +6,7 @@
 <title>スポットMAP</title>
 </head>
 <body>
-<h1>ルートの選択</h1>
+<h1>ルート選択</h1>
 <!--(spotの)目的スポット住所をgoogle_mapにピン留めする。-->
 <!--とりあえず埋め込んだ-->
 <div class="google_map">
