--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -22,7 +22,7 @@
 		</h3>
 
 		<h3>
-			<a href="「④スポットMAP」へ戻るURL" target="_blank" rel="noopener noreferrer">修正する</a>
+			<a href="「④スポットMAP」へ戻るURL">修正する</a>
 		</h3>
 
 		<h3>
