--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/map.css">
-<title>スポットMAP</title>
+<title>スポットのMAP</title>
 </head>
 <body>
 <h1>ルート選択</h1>
