--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -18,11 +18,12 @@
 
 	<div class="element">
 		<h3>
-			<a href="スケジュールのURL" target="_blank" rel="noopener noreferrer">スケジュール</a>
+			<p>スケジュール</p>
+			
 		</h3>
 
 		<h3>
-			<a href="「④スポットMAP」へ戻るURL">修正する</a>
+			<a href="map.html">修正する</a>
 		</h3>
 
 		<h3>
