--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -17,9 +17,26 @@
 	</div>
 
 	<div class="element">
+
 		<h3>
-			<p>スケジュール</p>
-			
+			<table id="table">
+				<tr>
+					<th colspan="2">スケジュール</th>
+				</tr>
+				<tr>
+					<th>名前</th>
+					<th>場所(URL)</th>
+				</tr>
+				<tr>
+					<td>名前</td>
+					<td>場所(URL)</td>
+				</tr>
+				<tr>
+					<td>名前</td>
+					<td>場所(URL)</td>
+				</tr>
+			</table>
+
 		</h3>
 
 		<h3>
