--- a/src/main/resources/templates/purpose_osaka.html
+++ b/src/main/resources/templates/purpose_osaka.html
@@ -2,20 +2,28 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="css/pupoes_osaka.css">
+<link href="css/purpose_osaka.css" rel="stylesheet" type="text/css">
+
 <title>大阪エリア</title>
 </head>
 <body>
 
 
 <h1>大阪エリア</h1>
+<hr>
 
 <div class="food">
-<h3><img src="../imag/path1.svg" > 食べる</h3>
+<div class="img"><img src="image\takoyaki.png"></div>
+<h3 class="e">食べる</h3>
+
 
 </div>
 <p> </p>
+
+
 <h3>見る</h3>
+
+
 <p> </p>
 <h3>遊ぶ</h3>
 
