--- a/src/main/resources/templates/spot_active.html
+++ b/src/main/resources/templates/spot_active.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 
+<h2>ユニバーサルスタジオジャパン</h2>
+
+<h2>カップラーメンミュージアム</h2>
+
+<h2>海遊館</h2>
+
+<h2>天王寺動物園</h2>
+
+<h2>umekita</h2>
+
+
+
 </body>
 </html>
