--- a/src/main/resources/templates/manager_login.html
+++ b/src/main/resources/templates/manager_login.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>ログイン画面</title>
+<link rel="stylesheet" href="css/manager_login.css">
 </head>
 <body>
-
+ <!-- ログインエラーのときはメッセージを表示 -->
+ <div th:if="${failureMessage != null}" th:text="${failureMessage}"></div>
+ <!-- ログインフォーム -->
+ <!-- th:action は SecurityConfig の loginProcessingUrl で指定した URL -->
+ 
+ <form th:action="@{authenticate}" method="post">
+ <table>
+ <tr>
+ <th>ID</th>
+ <td><input type="text" name="username" /></td>
+ </tr>
+ <tr>
+ <th>PASSWORD</th>
+ <td><input type="password" name="password" /></td>
+ </tr>
+ </table>
+ <input type="submit" value="login" />
+ </form>
 </body>
 </html>
