--- a/src/main/resources/templates/purpose_osaka.html
+++ b/src/main/resources/templates/purpose_osaka.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<link href="css/purpose_osaka.css" rel="stylesheet" type="text/css">
+    <meta charset="UTF-8">
+    <link href="../static/css/style_oomuro.css" rel="stylesheet" type="text/css">
 
-<title>大阪エリア</title>
+    <title>大阪エリア</title>
 </head>
+
 <body>
+    <div class="osaka">
+        <h1>大阪エリア</h1>
+        
 
+        <div class="food">
+            <div class="img"><a target="_blank" rel="noopener noreferrer" href="spot_food.html"><img src="../imag/takoyaki.png"></a></div>
+            <h3>食べる</h3>
+        </div>
+        <div class="look">
+            <div class="img"><a target="_blank" rel="noopener noreferrer" href="spot_tour.html"><img src="../imag/osakajyou.png"></a></div>
+            <h3>見る</h3>
 
-<h1>大阪エリア</h1>
-<hr>
-<p></p>
-<div class="food">
-<div class="img"><img src="image\takoyaki.png"></div>
-<h3 class="e">食べる</h3>
-
-
-</div>
-<p> </p>
-
-
-<h3>見る</h3>
-
-
-<p> </p>
-<h3>遊ぶ</h3>
+        </div>
+        <div class="play">
+            <div class="img"><a target="_blank" rel="noopener noreferrer" href="spot_active.html"> <img src="../imag/g4.png"></a></div>
+            <h3>遊ぶ</h3>
+        </div>
+    </div>
 
 
 
 
 </body>
+
 </html>
