--- a/src/main/resources/templates/spot_food.html
+++ b/src/main/resources/templates/spot_food.html
@@ -2,13 +2,38 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link href="../static/css/style_oomuro.css" rel="stylesheet" type="text/css">
 <title>食べる</title>
 </head>
+
 <body>
+    <div class="food">
+<div class="kita">
+    <h3>北エリア</h3>
+        <div class="yukari">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.yukarichan.co.jp/">
+                <h3>お好み焼ゆかり 曾根崎本店</h3>
+                <div class="img_yukari"><img src="../imag/yukari.jpg"></div>
+            </a>
+            <p>フワフワで美味しい</p>
+            <address>
+                <a href="https://www.yukarichan.co.jp/">大阪市北区曽根崎2-14-13</a><br>
+                <a href="tel:06-6311-0214">TEL:06-6311-0214</a>
+            </address>
+        </div>
 
-<h1>北エリア</h1>
 
-<h1>南エリア</h1>
+</div>
 
+
+
+<h3>南エリア</h3>
+
+
+
+
+</div>
 </body>
+
+
 </html>
