myPage.html 変更　樋口

--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -18,34 +18,40 @@
 
 	<div class="element">
 
-		<h3>
-			<table id="table">
-				<tr>
-					<th colspan="2">スケジュール</th>
-				</tr>
-				<tr>
-					<th>名前</th>
-					<th>場所(URL)</th>
-				</tr>
-				<tr>
-					<td>名前</td>
-					<td>場所(URL)</td>
-				</tr>
-				<tr>
-					<td>名前</td>
-					<td>場所(URL)</td>
-				</tr>
-			</table>
+		<!-- ▼▼▼ 以下テーブルはスケジュール表 ▼▼▼ -->
+		<!-- データベースから引っ張ってきたい -->
+		<table id="table">
+			<tr>
+				<th colspan="2">スケジュール</th>
+			</tr>
+			<tr>
+				<th>名前</th>
+				<th>場所(URL)</th>
+			</tr>
+			<tr>
+				<td>名前</td>
+				<td>場所(URL)</td>
+			</tr>
+			<tr>
+				<td>名前</td>
+				<td>場所(URL)</td>
+			</tr>
+		</table>
+		<!-- ▲▲▲ 以上テーブル ▲▲▲ -->
 
-		</h3>
 
+		<!-- ▼▼▼ 以下修正ボタン（ひとつ前のページのリンク）▼▼▼ -->
 		<h3>
 			<a href="map.html">修正する</a>
 		</h3>
+		<!-- ▲▲▲以上修正ボタン ▲▲▲-->
+
 
 		<h3>
 			<!-- リマインドボタン -->
+			<!-- いまいち作り方が思いつかない -->
 		</h3>
+
 
 		<h3>
 			<!-- メモ帳 -->
@@ -53,7 +59,9 @@
 			<textarea rows="5" cols="30"></textarea>
 		</h3>
 
+
 		<h4>
+			<!-- 下記コメントはログアウト専用の公式みたいなもの。たぶん使わない。 -->
 			<!-- <form name="Logout" method="post" action="/cgi-bin/Logout.cgi">
 			<input type="submit" value="Logout" />
 			</form> -->
