--- a/src/main/resources/templates/spot_active.html
+++ b/src/main/resources/templates/spot_active.html
@@ -2,75 +2,86 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <link href="../static/css/style_oomuro.css" rel="stylesheet" type="text/css">
-    <title>遊ぶ</title>
+<meta charset="UTF-8">
+<link href="../static/css/style_oomuro.css" rel="stylesheet"
+	type="text/css">
+<title>遊ぶ</title>
 </head>
 
-<body>
-    <div class="asobu">
 
-        <div class="usj">
+<div class="asobu">
 
-            <a target="_blank" rel="noopener noreferrer" href="https://www.usj.co.jp/web/ja/jp">
-                <h3>ユニバーサルスタジオジャパン</h3>
-                <div class="img_usj"><img src="../imag/USJ_image.jpg"></div>
-            </a>
-            <p>一日中楽しめる!!!</p>
-            <address>
-                <a href="https://www.usj.co.jp/web/ja/jp">大阪市此花区桜島2-1-33</a><br>
-                <a href="tel:06-6465-3000">TEL:06-6465-3000</a>
-            </address>
-        </div>
+	<div class="usj">
 
-        <div class="cupnoodles">
-            <a target="_blank" rel="noopener noreferrer" href="https://www.cupnoodles-museum.jp/ja/osaka_ikeda/">
-                <h3>カップラーメンミュージアム</h3>
-                <div class="img_cup"><img src="../imag/cupnoodlesM.jpg"></div>
-            </a>
-            <p>オリジナルカップラーメンが作れる</p>
-            <address>
-                <a href="https://www.cupnoodles-museum.jp/ja/osaka_ikeda/">大阪府池田市満寿美町8-25</a><br>
-                <a href="tel:072-752-3484">TEL:072-752-3484</a>
-            </address>
-        </div>
+		<a target="_blank" rel="noopener noreferrer"
+			href="https://www.usj.co.jp/web/ja/jp">
+			<h3>ユニバーサルスタジオジャパン</h3>
+			<div class="img_usj">
+				<img src="../imag/USJ_image.jpg">
+			</div>
+		</a>
+		<p>一日中楽しめる!!!</p>
+		<address>
+			<a href="https://www.usj.co.jp/web/ja/jp">大阪市此花区桜島2-1-33</a><br>
+			<a href="tel:06-6465-3000">TEL:06-6465-3000</a>
+		</address>
+	</div>
 
+	<div class="cupnoodles">
+		<a target="_blank" rel="noopener noreferrer"
+			href="https://www.cupnoodles-museum.jp/ja/osaka_ikeda/">
+			<h3>カップラーメンミュージアム</h3>
+			<div class="img_cup">
+				<img src="../imag/cupnoodlesM.jpg">
+			</div>
+		</a>
+		<p>オリジナルカップラーメンが作れる</p>
+		<address>
+			<a href="https://www.cupnoodles-museum.jp/ja/osaka_ikeda/">大阪府池田市満寿美町8-25</a><br>
+			<a href="tel:072-752-3484">TEL:072-752-3484</a>
+		</address>
+	</div>
 
-        <div class="kaiyukan">
-            <a target="_blank" rel="noopener noreferrer" href="https://www.kaiyukan.com/">
-                <h3>海遊館</h3>
-                <div class="img_kaiyukan"><img src="../imag/kaiyuukann.jpg"></div>
-            </a>
-            <p>世界最大級の水族館</p>
-            <address>
-                <a href="https://www.kaiyukan.com/">大阪府大阪市港区海岸通1-1-10</a><br>
-                <a href="tel:06-6576-5501">TEL:06-6576-5501</a>
-            </address>
+	<div class="kaiyukan">
+		<a target="_blank" rel="noopener noreferrer"
+			href="https://www.kaiyukan.com/">
+			<h3>海遊館</h3>
+			<div class="img_kaiyukan">
+				<img src="../imag/kaiyuukann.jpg">
+			</div>
+		</a>
+		<p>世界最大級の水族館</p>
+		<address>
+			<a href="https://www.kaiyukan.com/">大阪府大阪市港区海岸通1-1-10</a><br> <a
+				href="tel:06-6576-5501">TEL:06-6576-5501</a>
+		</address>
+	</div>
 
+	<div class="tennoujizoo">
+		<a target="_blank" rel="noopener noreferrer"
+			href="https://www.tennojizoo.jp/">
+			<h3>天王寺動物園</h3>
+			<div class="img_zoo">
+				<img src="../imag/tennnoujizoo.jpg">
+			</div>
+		</a>
+		<p>動物園で楽しく学ぼう</p>
+		<address>
+			<a href="https://www.tennojizoo.jp/">大阪市天王寺区茶臼山町1-108</a><br> <a
+				href="tel:06-6576-5501">TEL:06-6771-8401</a>
+		</address>
+	</div>
+</div>
 
-
-        </div>
-
-        <div class="tennoujizoo">
-            <a target="_blank" rel="noopener noreferrer" href="https://www.tennojizoo.jp/">
-                <h3>天王寺動物園</h3>
-                <div class="img_zoo"><img src="../imag/tennnoujizoo.jpg"></div>
-            </a>
-            <p>動物園で楽しく学ぼう</p>
-            <address>
-                <a href="https://www.tennojizoo.jp/">大阪市天王寺区茶臼山町1-108</a><br>
-                <a href="tel:06-6576-5501">TEL:06-6771-8401</a>
-            </address>
-
-
-
-
-
-        </div>
-        <h3>umekita</h3>
-
-
-    </div>
+<hr>
+<div class="login_bar">
+	<div class="container white z-depth-2">
+		<ul class="tabs teal">
+			<li class="tab col s3"><a class="button_login" href="login.html">ログイン</a></li>
+			<li class="tab col s3"><a class="Register" href="register.html">新規登録</a></li>
+		</ul>
+	</div>
+</div>
 </body>
 
 </html>
