--- a/src/main/resources/static/css/style_oomuro.css
+++ b/src/main/resources/static/css/style_oomuro.css
@@ -70,3 +70,48 @@
     height: 250px;
     object-fit: cover
 }
+.login_bar{
+    width:90%;
+    min-width: 200px;
+    max-width: 600px;
+    padding: auto;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+button {
+ background-color: hwb(160 56% 9%);
+}
+
+.login body{
+  background: #f5f5f5;
+}
+
+h5
+{
+  font-weight: 400;
+}
+
+.container
+{
+  margin-top: 80px;
+  width: 400px;
+  height: 700px;
+}
+
+.tabs .indicator
+{
+  background-color: #e0f2f1;
+  height: 60px;
+  opacity: 0.3;
+}
+
+.form-container
+{
+  padding: 40px;
+  padding-top: 10px;
+}
+
+.confirmation-tabs-btn
+{
+  position: absolute;
+}
