--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,7 +13,7 @@
             <div class="row">
               <div class="input-field col s6">
                 <input id="last_name" type="text" class="validate">
-                <label for="last_name">First Name</label>
+                <label for="last_name">Name</label>
               </div>
               <div class="input-field col s6">
                 <input id="last_name" type="text" class="validate">
