--- a/src/main/resources/templates/spot_tour.html
+++ b/src/main/resources/templates/spot_tour.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <link href="../static/css/style_oomuro.css" rel="stylesheet"
 	type="text/css">
-<title>観光</title>
+<title>観る</title>
 </head>
 
 <body>
