Controller, Form, entity, myPage変更　樋口

--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -67,7 +67,7 @@
 			<!-- <form name="Logout" method="post" action="/cgi-bin/Logout.cgi">
 			<input type="submit" value="Logout" />
 			</form> -->
-			<a href="ログアウト画面">ログアウト</a>
+			<a href="out.html">ログアウト</a>
 		</h4>
 	</div>
 </body>
