--- a/src/main/resources/templates/css/manager_page.css
+++ b/src/main/resources/templates/css/manager_page.css
@@ -47,3 +47,17 @@ img {
 tr {
 	background: #e6e6e6;
 }
+
+.D, 
+.A {
+	display: inline-block;
+	background: #e6e6e6;
+	padding: 5px 10px;
+	cursor: pointer;
+	}
+
+.E,
+.B {
+  background: #e6e6e6;
+	height: 100px;
+	}
