--- a/src/main/resources/templates/manager_login.html
+++ b/src/main/resources/templates/manager_login.html
@@ -22,7 +22,7 @@
  <td><input type="password" name="password" /></td>
  </tr>
  </table>
- <input type="submit" value="login" />
+ <button type="button" onclick="location.href='manager_page.html'" >login</button>
  </form>
 </body>
 </html>
