--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<!-- タイムリーフを使用 -->
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/map.css">
@@ -12,6 +13,7 @@
 <div class="google_map">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104994.9812239278!2d135.48603735!3d34.6775981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6553406e2e1%3A0xc55bc16ee46a2fe7!2z5aSn6Ziq5bqc5aSn6Ziq5biC!5e0!3m2!1sja!2sjp!4v1694049424516!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
+
 
 <button type="button" onclick="history.back()">一つ前の操作に戻る</button>
 <hr>
