--- a/src/main/resources/templates/css/map.css
+++ b/src/main/resources/templates/css/map.css
@@ -17,5 +17,12 @@ button{
 
 #map {
 	height: 400px;
-	width: 100%;
+	width: 50%;
+	margin: 0 auto;
+    
+}
+
+#duration{
+	text-align: center;
+	margin: 20px;
 }
