--- a/src/main/resources/templates/manager_login.html
+++ b/src/main/resources/templates/manager_login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>ログイン画面</title>
-<link rel="stylesheet" href="css/manager_login.css">
+<link rel="stylesheet" href="../static/css/manager_login.css">
 </head>
 <body>
  <!-- ログインエラーのときはメッセージを表示 -->
