--- a/src/main/resources/static/css/manager_page.css
+++ b/src/main/resources/static/css/manager_page.css
@@ -48,17 +48,20 @@ tr {
 	background: #e6e6e6;
 }
 
-.D, 
-.A {
+.A, 
+.C {
 	display: inline-block;
 	background: #e6e6e6;
 	padding: 5px 10px;
 	cursor: pointer;
 	}
 
-.E,
-.B {
+.B,
+.D {
   display: none;
   background: #e6e6e6;
 	height: 100px;
 	}
+
+  
+  
