--- a/src/main/resources/templates/css/manager_page.css
+++ b/src/main/resources/templates/css/manager_page.css
@@ -48,16 +48,18 @@ tr {
 	background: #e6e6e6;
 }
 
-.D, 
-.A {
+.A, 
+.C,
+.E {
 	display: inline-block;
 	background: #e6e6e6;
 	padding: 5px 10px;
 	cursor: pointer;
 	}
 
-.E,
-.B {
+.B,
+.D,
+.F {
   display: none;
   background: #e6e6e6;
 	height: 100px;
