--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
         </div>
         <br>
 
-          <button class="btn waves-effect waves-light teal" type="submit" name="action">Connect</button>
+          <button class="login_map" type="button" onclick="location.href='map.html'" name="action">ログイン</button>
           <br>
           <br>
           <a href="">Forgotten password?</a>
