--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,13 +12,10 @@
             <h3 class="teal-text">Welcome</h3>
             <div class="row">
               <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Name</label>
+                <input id="name" type="text" class="validate">
+                <label for="name">Name</label>
               </div>
-              <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Last Name</label>
-              </div>
+              
             </div>
             <div class="row">
               <div class="input-field col s12">
@@ -46,8 +43,8 @@
             </div>
             <center>
               <button class="btn waves-effect waves-light teal" type="submit" name="action">登録</button>
-            </center>
-          </div>
+            <center>
+            </div>
         </form>
 </body>
 </html>
