--- a/src/main/resources/templates/spot_tour.html
+++ b/src/main/resources/templates/spot_tour.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<div class="tour">
+	<div class="tour">ｓ
 
 		<div class="oosakajyou">
 			<a target="_blank" rel="noopener noreferrer"
@@ -79,13 +79,11 @@
 	
 	<hr>
 	<div class="login_bar">
-		<div class="container white z-depth-2">
-			<ul class="tabs teal">
-				<li class="tab col s3"><a class="button_login"
-					href="login.html">ログイン</a></li>
-				<li class="tab col s3"><a class="Register" href="register.html">新規登録</a></li>
-			</ul>
-		</div>
+			<button type=“button” onclick="location.href='login.html'">ログイン</button>
+			<button type=“button”
+				onclick="location.href='register.html'">新規登録</button>
+		
+	
 	</div>
 
 </body>
