変更　大室　TOP　CSS階層変更　など

--- a/src/main/resources/static/css/style_oomuro.css
+++ b/src/main/resources/static/css/style_oomuro.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 
+
+.osaka_spot{
+  display:flex;
+  flex-direction:column;
+}
+.spot_view{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+
 .oosaka {
   width: auto;
   margin: auto;
