--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -12,12 +12,12 @@
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
 
 <!--headercss-->
-<link href="css/meanmenu.css" rel="stylesheet" type="text/css">
-<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="css/header.css" rel="stylesheet" type="text/css">
+<link href="../static/css/meanmenu.css" rel="stylesheet" type="text/css">
+<link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="../static/css/header.css" rel="stylesheet" type="text/css">
 <!--css-->
-<link href="css/i-style.css" rel="stylesheet" type="text/css">
-<link href="css/parts.css" rel="stylesheet" type="text/css">
+<link href="../static/css/i-style.css" rel="stylesheet" type="text/css">
+<link href="../static/css/parts.css" rel="stylesheet" type="text/css">
 
 <!--font-awesome-->
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -43,8 +43,8 @@
 <script type="text/javascript" src="js/scroll.js"></script>
 	
 <!--slider-->
-<link href="css/slick.css" rel="stylesheet" type="text/css">
-<link href="css/slick-theme.css" rel="stylesheet" type="text/css">
+<link href="../static/css/slick.css" rel="stylesheet" type="text/css">
+<link href="../static/css/slick-theme.css" rel="stylesheet" type="text/css">
 
 <!--headerscript-->
 <script type="text/javascript">
