--- a/src/main/resources/templates/purpose_osaka.html
+++ b/src/main/resources/templates/purpose_osaka.html
@@ -10,29 +10,72 @@
 
 <body>
 
-    <div class="osaka">
+    <div class="osaka_spot">
         <br>
-        <hr>
+      
         <h1>大阪エリア</h1>
+      
+        <br>
+
+        <div class="spot_view">
+            <div class="food">
+                <div class="img"><a target="_blank" rel="noopener noreferrer" href="spot_food.html"><img
+                            src="../imag/takoyaki.png"></a></div>
+                <h3>食べる</h3>
+            </div>
+            <div class="look">
+                <div class="img"><a target="_blank" rel="noopener noreferrer" href="spot_tour.html"><img
+                            src="../imag/osakajyou.png"></a></div>
+                <h3>観る </h3>
+
+            </div>
+            <div class="play">
+                <div class="img"><a target="_blank" rel="noopener noreferrer" href="spot_active.html"> <img
+                            src="../imag/g4.png"></a></div>
+                <h3>遊ぶ</h3>
+            </div>
+        </div>
+
+        <hr>
         <hr>
 
-        <div class="food">
-            <div class="img"><a target="_blank" rel="noopener noreferrer" href="spot_food.html"><img src="../imag/takoyaki.png"></a></div>
-            <h3>食べる</h3>
-        </div>
-        <div class="look">
-            <div class="img"><a target="_blank" rel="noopener noreferrer" href="spot_tour.html"><img src="../imag/osakajyou.png"></a></div>
-            <h3>観る </h3>
+        <div class="login_bar">
+
+            <button type=“button” onclick="location.href='register.html'">新規登録</button>
 
         </div>
-        <div class="play">
-            <div class="img"><a target="_blank" rel="noopener noreferrer" href="spot_active.html"> <img src="../imag/g4.png"></a></div>
-            <h3>遊ぶ</h3>
+
+
+
+        <div id="login" class="col s12">
+
+            <form class="col s12">
+
+                <div class="form-container">
+                    <h3 class="teal-text"></h3>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="email" type="email" class="validate">
+                            <label for="email">Email</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="password" type="password" class="validate">
+                            <label for="password">Password</label>
+                        </div>
+                    </div>
+                    <br>
+
+                    <button class="login_map" type="button" onclick="location.href='spot.html'"
+                        name="action">ログイン</button>
+                    <br>
+                    <br>
+                    <a href="">Forgotten password?</a>
+
+                </div>
+            </form>
         </div>
-    </div>
-
-
-
 
 </body>
 
